# serverless-swarm

./: .gitignore  Cargo.html  README.md  main.rs
swarmgen/: cli.py
templates/rust/: Cargo.toml
templates/rust/src/: main.rs
