[package]
name = "lambda_function"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

